minor styling changes and fix line break in contact page

--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ button#order {
 #content {
     width: 100%;
     box-sizing: border-box;
-    padding: 40px 25%;
+    padding: 80px 25%;
     display: flex;
     flex-direction: column;
 
@@ -83,10 +83,14 @@ button#order {
     width: 100%;
 
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 300px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 220px;
 
     gap: 80px;
+}
+
+#content .menu-title{
+    text-align: center;
 }
 
 #content .menu-holder article {
@@ -95,6 +99,7 @@ button#order {
     flex-direction: column;
     text-align: center;
 }
+
 
 #content .menu-holder article img {
     width: 100%;
